doing the frontend

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -33,15 +33,16 @@
     </header>
     <div class="content">
         <div class="intro-logo">
-         <picture>
-            <img src="/20250831_1105_File Uploader Logo_simple_compose_01k3zje88fea8tkycdc3cyjefm.png" alt="">
-         </picture>
+          <h1>
+
+            📂 File Storage & Uploads
+          </h1>
          <div class="text">
-           
+           Our file uploader makes it easy to securely store and manage your files in one place. Simply drag and drop or browse to upload, and your files will be safely organized for quick access whenever you need them.
          </div>
         </div>
-        <div class="intro-text">
-             Store and share files
+        <div class="started">
+         <a href="/signin">Get Started</a>
         </div>
     </div>
   </body>
