--- a/public/styles.css
+++ b/public/styles.css
@@ -75,11 +75,6 @@ a{
     width: auto;             /* Maintain aspect ratio */
     display: block;          /* Remove inline spacing issues */
 }
-picture {
-    display: flex;
-    align-items: center;     /* Vertically center logo in header if needed */
-}
-
 .nav{
     width: 15%;
     display: flex;
@@ -87,40 +82,150 @@ picture {
 }
 .nav > *{
     border:2px solid var(--color-header-border);
-    padding: 0.3rem;
+    padding: 0.5rem;
     border-radius: 10px;
     font-size: 1.3rem;
 
 }
 .nav > *:hover{
     border:2px solid var(--color-accent);
+    background-color: var(--color-accent);
+    color: var(--color-accent-bg);
     
 }
 .content{
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
     height: 90vh;
     width: 100%;
     gap: 10px;
 }
 .intro-logo{
-   width: 30%;
+   width: 50%;
    height: 50vh;
-}
-.intro-logo picture{
-    height: inherit;
-    width: 65vh;
-}
-.intro-logo img{
-      border: 2px solid slateblue;
-  width: 100%;      /* make it scale to its container's width */
-  height: inherit;     /* auto keeps the aspect ratio */
-  display: block;   /* removes weird inline spacing */
-}
-.intro-text{
-    width: 30%;
-   height: 50vh;
-   font-size: 5rem;
    display: flex;
+   flex-direction: column;
+   gap: 20px;
    align-items: center;
+}
+.intro-logo h1{
+    font-size: 3rem;
+    padding-right: 5.5rem;
+}
+.intro-logo .text{
+    font-size: 1.5rem;
+}
+.started {
+    background-color: var(--color-accent);
+    color: var(--color-text);
+    width: 20%;
+    display: flex; 
+    flex-direction: column; 
+    text-align: center;
+    border: 1px solid var(--color-border);
+    box-sizing: border-box; 
+    border-radius: 10px;
+}
+.started a{
+    width: 100%;
+    height: 100%;
+    padding: 1rem;
+    font-size: 2rem;
+}
+.sign-wrapper{
+    display: flex;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.sign-content{
+    padding: 1rem;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    width: 35%;
+    height: 60vh;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+.sign-form{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.sign-form input:not([type="submit"]){
+      width: 90%;
+    height: 50px;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    outline: none;
+}
+.sign-form input:not([type="submit"]):focus{
+    border: 2px solid var(--color-accent);
+}
+.sign-form .submit{
+   margin: 10% 0 0 25%; /* top right bottom left */
+    background-color: var(--color-accent);
+    width: 50%;
+    padding: 0.7rem;
+    border-radius: 10px;
+    border: 1px solid var(--color-border);
+    font-size: 1rem;
+    font-weight: bolder;
+    cursor: pointer;
+}
+.signup-wrapper{
+    display: flex;
+    height: 90vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.signup-content{
+    padding: 1rem;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    width: 35%;
+    height: 70vh;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+.signup-form{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+.signup-form input:not([type="submit"]){
+      width: 90%;
+    height: 50px;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    outline: none;
+}
+.signup-form input:not([type="submit"]):focus{
+    border: 2px solid var(--color-accent);
+}
+.signup-form .submit{
+   margin: 10% 0 0 25%; /* top right bottom left */
+    background-color: var(--color-accent);
+    width: 50%;
+    padding: 0.7rem;
+    border-radius: 10px;
+    border: 1px solid var(--color-border);
+    font-size: 1rem;
+    font-weight: bolder;
+    cursor: pointer;
+
 }
