doing the signup and signin functinality

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -16,21 +16,8 @@
 🗂️ — Collection of files -->
   </head>
   <body>
-    <header>
-      <picture>
-        <a href="">
-          <img
-            src="/20250831_1105_File Uploader Logo_simple_compose_01k3zje88fea8tkycdc3cyjefm.png"
-            alt="Logo"
-            class="logo"
-          />
-        </a>
-      </picture>
-      <div class="nav">
-        <a href="/sigup">Sign Up</a>
-        <a href="/signin">Sign In</a>
-      </div>
-    </header>
+     <%- include('partials/header') %>
+   
     <div class="content">
         <div class="intro-logo">
           <h1>
