--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -26,6 +26,8 @@
                 <input type="email" name="email" id="email">
                 <label for="password">password</label>
                 <input type="password" name="password" id="password">
+                <label for="confirm password">confirm password</label>
+                <input type="password" name="confirm password" id="confirm password">
                 <input type="submit" value="submit" class="submit">
             </form>
            
