--- a/views/signin.ejs
+++ b/views/signin.ejs
@@ -19,7 +19,7 @@
      <div class="sign-wrapper">
         <div class="sign-content">
             <h2>SigIn</h2>
-            <form action="/sigin" method="post" class="sign-form">
+            <form action="/signin" method="post" class="sign-form">
                 <label for="username">username </label>
                 <input type="text" name="username" id="username">
                 <label for="password">password</label>
