--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,38 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Cal+Sans&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Josefin+Sans:ital,wght@0,100..700;1,100..700&family=Poetsen+One&display=swap"
       rel="stylesheet"
     />
     <link rel="stylesheet" href="/styles.css" />
-    <title>📝 </title>
-</head>
-<body>
-     <%- include('partials/header') %>
+    <title>📝</title>
+  </head>
+  <body>
+    <%- include('partials/header') %>
 
+    <div class="signup-wrapper">
+      <div class="signup-content">
+        <h2>SigUp</h2>
+        <% if(errors && errors.length > 0){%>
+        <ul class="msg-errors">
+          <% errors.forEach( err => { %>
+          <li><%= err.msg%></li>
+          <% })%>
+        </ul>
 
-     <div class="signup-wrapper">
-        <div class="signup-content">
-            <h2>SigUp</h2>
-            <form action="/signup" method="post" class="signup-form">
-                   <label for="username">username </label>
-                <input type="text" name="username" id="username">
-                <label for="email">Email</label>
-                <input type="email" name="email" id="email">
-                <label for="password">password</label>
-                <input type="password" name="password" id="password">
-                <label for="confirm password">confirm password</label>
-                <input type="password" name="confirm password" id="confirm password">
-                <input type="submit" value="submit" class="submit">
-            </form>
-           
-        </div>
-
-     </div>
-</body>
+        <% }%>
+        <form action="/signup" method="post" class="signup-form">
+          <label for="username">username </label>
+          <input type="text" name="username" id="username" />
+          <label for="email">Email</label>
+          <input type="email" name="email" id="email" />
+          <label for="password">password</label>
+          <input type="password" name="password" id="password" />
+          <label for="confirmPassword">Confirm Password</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" />
+          <input type="submit" value="submit" class="submit" />
+        </form>
+      </div>
+    </div>
+  </body>
 </html>
