--- a/public/styles.css
+++ b/public/styles.css
@@ -231,3 +231,134 @@ a{
     padding-left: 5%;
     font-size: 0.7rem;
 }
+.welcome {
+  background: var(--color-primary-soft);   
+  width: 30%;
+  color: var(--color-text);
+  padding: 1rem 2rem;
+  border-radius: 10px;
+  font-size: 1.2rem;
+  font-weight: bold;
+  text-align: center;
+  animation: fadeOut 3s ease-in-out forwards;
+  position: fixed;
+  top: 15%;
+  left: 35%;
+  animation-delay: 2s; 
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    visibility: hidden;
+  }
+}
+
+.folders-content{
+    border: 2px solid black;
+    display: flex;
+    height: 90vh;
+}
+.folder-nav{
+    border: 2px solid var(--color-border);
+    width: 20%;
+    /* background-color: red; */
+    display: flex;
+    flex-direction: column;
+}
+.folders-header{
+    width: 100%;
+    height: 10vh;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--color-border);
+
+}
+.folders-header>*{
+    flex: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1.7rem;
+}
+.folders-items{
+    background-color: red;
+    flex: 1;
+}
+.folder-item{
+    background-color: white;
+}
+.add-folders input{
+    width: 80%;
+    display: flex;
+    height: 70%;
+    border-radius: 10px;
+    outline: none;
+    border: 1px solid var(--color-border);
+    cursor: pointer;
+    font-size: 1.4rem;
+    font-weight: bold;
+
+}
+.modal {
+  display: none; 
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+   height: 100%;
+  color: var(--color-text);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: var(--color-primary-soft);
+  border: 1px solid var(--color-border);
+  padding: 2rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 40%;
+  text-align: center;
+  position: relative;
+  opacity: 8;
+}
+.close {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+.modal-content form{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+.modal-content input{
+       width: 90%;
+    height: 50px;
+    border: 2px solid var(--color-border);
+    border-radius: 10px;
+    font-size: 1.5rem;
+    font-weight: bolder;
+    outline: none;
+}
+.modal-content input:focus{
+    border: 2px solid var(--color-accent);
+}
+.model-button{
+      margin: 5% 0 0 25%; /* top right bottom left */
+    background-color: var(--color-accent);
+    width: 50%;
+    padding: 0.7rem;
+    border-radius: 10px;
+    border: 1px solid var(--color-border);
+    font-size: 1rem;
+    font-weight: bolder;
+    cursor: pointer;
+}
