--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,8 +8,14 @@
           />
         </a>
       </picture>
-      <div class="nav">
-        <a href="/signup">Sign Up</a>
-        <a href="/signin">Sign In</a>
-      </div>
+     <div class="nav">
+  <% if (currentuser && currentuser.username) { %>
+    <a href="/folders">Folders</a>
+    <a href="/logout">Logout</a>
+  <% } else { %>
+    <a href="/signup">Sign Up</a>
+    <a href="/signin">Sign In</a>
+  <% } %>
+</div>
+
     </header>
