--- a/public/styles.css
+++ b/public/styles.css
@@ -324,6 +324,8 @@ a {
   color: var(--color-text);
   justify-content: center;
   align-items: center;
+      background: rgba(0,0,0,0.6);
+
 }
 
 .modal-content {
@@ -372,5 +374,85 @@ a {
   border: 1px solid var(--color-border);
   font-size: 1rem;
   font-weight: bolder;
+  cursor: pointer;
+}
+.folder-content{
+  width: 100%;
+  padding: 1rem;
+}
+ .modal-file {
+      display: none; 
+      position: fixed;
+      z-index: 1000;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+    }
+    .modal-file-content{
+  background: var(--color-primary-soft);
+  border: 1px solid var(--color-border);
+  padding: 2rem;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  width: 40%;
+  text-align: center;
+  position: relative;
+  opacity: 8;
+    }
+    .modal-file-content form{
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+    }
+
+    #content{
+      height: 20vh;
+       border: 2px solid var(--color-border);
+  border-radius: 10px;
+  font-size: 1.5rem;
+  font-weight: bolder;
+  outline: none;
+    }
+    #content:focus{
+  border: 2px solid var(--color-accent);
+    }
+    #file{
+      font-size: 1.5rem;
+    }
+
+.files-header{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.file-modal{
+  background: var(--color-primary-soft);
+  border: 1px solid var(--color-border);
+}
+
+.newfile{
+   width: 20%;
+  display: flex;
+  height: 70%;
+  border-radius: 10px;
+  outline: none;
+  border: 1px solid var(--color-border);
+  cursor: pointer;
+  font-size: 1.4rem;
+  font-weight: bold;
+  padding: 5px;
+}
+.file-close{
+   position: absolute;
+  top: 10px;
+  right: 15px;
+  font-size: 1.5rem;
   cursor: pointer;
 }
