--- a/views/partials/files.ejs
+++ b/views/partials/files.ejs
@@ -1,13 +1,45 @@
-<% if (files.length > 0) { %>
-  <h3>Files in <%= files[0].folder.name %></h3>
-  <ul>
-    <% files.forEach(file => { %>
-      <li>
-        <strong>Name:</strong> <%= file.name %> <br>
-        <strong>Content:</strong> <%= file.content %>
-      </li>
-    <% }) %>
-  </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+</head>
+<body>
+  <div class="files-header">
+   <% if (files && files.length > 0) { %>
+  <h2>Files in <%= files[0].folder?.name || "Unknown folder" %></h2>
 <% } else { %>
-  <h3>No files in this folder</h3>
+  <h2>No files found</h2>
 <% } %>
+
+          <input type="submit" value="📄 New File" class="newfile">
+
+  </div>
+     <div class="modal-file" id="newFileModal">
+          <div class="modal-file-content">
+          <span class="file-close">&times;</span>
+         <h2>Create New Folder</h2>
+         <form action="/upload" method="POST" enctype="multipart/form-data">
+          <input type="file" name="avatar" id="file" required>
+      <button type="submit" class="model-button">Create</button>
+    </form>
+  </div>
+         </div>
+  <div class="files-content">
+    <% if (files.length > 0) { %>
+    <ul>
+      <% files.forEach(file => { %>
+        <li>
+          <strong>Name:</strong> <%= file.name %> <br>
+          <strong>Content:</strong> <%= file.Url %>
+        </li>
+      <% }) %>
+    </ul>
+  <% } else { %>
+    <h3>No files in this folder</h3>
+  <% } %>
+  </div>
+</body>
+<script src="/js/helper.js"></script>
+</html>
