--- a/views/folders.ejs
+++ b/views/folders.ejs
@@ -20,7 +20,6 @@
 
    <div class="folders-content">
     <div class="folder-nav">
-
       <div class="folders-header">
          <div class="add-folders">
           <input type="submit" value="📂 New Folder" class="open-modal-btn">
@@ -41,7 +40,6 @@
     <div class="folders-items">
       <% if (folders && folders.length > 0){%>
          <% folders.forEach(element => {%>
-          <!-- <input type="button" value=" <%= element.name%>" class="folder-item"> -->
           <form action="/folder/files" method="POST" class="folder-form">
         <input type="hidden" name="folderId" value="<%= element.id %>">
         <button type="submit" class="folder-item"> <%= element.name %></button>
@@ -53,7 +51,7 @@
    </div>
     <div class="folder-content">
       <% if(files && files.length > 0){ %>
-  <%- include('partials/files', { files: files }) %>
+  <%- include('partials/files', { files: files ,folders:folders  }) %>
 <% } else { %>
   <%- include('partials/files') %>
 <% } %>
