--- a/public/styles.css
+++ b/public/styles.css
@@ -430,6 +430,7 @@ a {
 .files-header{
   width: 100%;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
 .file-modal{
