--- a/public/styles.css
+++ b/public/styles.css
@@ -257,21 +257,19 @@ a {
 
 .folders-content {
   display: flex;
+  flex-direction: column;
   height: 90vh;
 }
 .folder-nav {
   border: 2px solid var(--color-border);
-  width: 20%;
-  /* background-color: red; */
+  width: 100%;
   display: flex;
-  flex-direction: column;
 }
 .folders-header {
-  width: 100%;
+  width: 20%;
   height: 10vh;
   display: flex;
   justify-content: space-between;
-  border-bottom: 1px solid var(--color-border);
 }
 .folders-header > * {
   flex: 1;
@@ -284,13 +282,24 @@ a {
   padding: 10px;
   flex: 1;
   display: flex;
-  flex-direction: column;
   justify-content: flex-start;
   align-items: center;
   gap: 20px;
+    overflow-x: auto;      /* enable horizontal scrolling */
+  white-space: nowrap;   /* prevent items from wrapping */
+  scrollbar-width: thin; /* optional: thinner scrollbar for Firefox */
+}
+/* Optional: for Webkit browsers (Chrome, Edge, Safari) */
+.folders-items::-webkit-scrollbar {
+  height: 8px; /* scrollbar thickness */
+}
+
+.folders-items::-webkit-scrollbar-thumb {
+  background-color: rgba(0,0,0,0.3);
+  border-radius: 4px;
 }
 .folder-item {
-  width: 100%;
+  width: 30%;
   cursor: pointer;
   font-size: x-large;
   border-radius: 10px;
@@ -300,6 +309,7 @@ a {
   justify-content: center;
   font-size: x-large;
 }
+
 .add-folders input {
   width: 80%;
   display: flex;
@@ -533,13 +543,68 @@ a {
   font-size: 1.5rem;
   cursor: pointer;
 }
+.folder-link{
+  width:90%;
+  padding: 7px;
+  border: 1px solid var(--color-border);
+  background-color: var(--color-primary-soft);
+  border-radius: 10px;
+  font-size: 1.3rem;
+  font-weight: bolder;
+  cursor: pointer;
+}
+.folder-link:hover{
+  background-color: var(--color-accent);
+}
+.options{
+  display: flex;
+  border: none;
+  gap: 10px;
+
+}
+.options>*{
+  display: flex;
+  outline: none;
+  text-decoration: none;
+  color: var(--color-text);
+  border-radius: 10px;
+  padding: 10px;
+}
+.options .delete{
+  border: 1px solid var(--color-border);
+  background-color: var(--color-danger);
+  text-decoration: none;
+  padding: 10px;
+
+}
+.deletefolder{
+   border: 1px solid var(--color-border);
+  background-color: var(--color-danger);
+  text-decoration: none;
+  padding: 10px;
+  outline: none;
+  text-decoration: none;
+  color: var(--color-text);
+  border-radius: 10px;
+}
+.options .edit{
+  border: 1px solid var(--color-border);
+  background-color: var(--color-accent);
+  text-decoration: none;
+}
 table {
   width: 100%;
   border-collapse: collapse;
   margin-top: 1rem;
-  background: var(--color-surface);
   box-shadow: var(--shadow-sm);
   border-radius: 0.5rem;
+}
+.table{
+   background-color: var(--color-primary-soft);
+   border: 1px solid var(--color-border);
+}
+table td, table th {
+  padding: 12px 15px; /* vertical | horizontal padding */
 }
 
 thead {
