--- a/public/styles.css
+++ b/public/styles.css
@@ -257,23 +257,23 @@ a {
 
 .folders-content {
   display: flex;
-  flex-direction: column;
   height: 90vh;
 }
 .folder-nav {
-  border: 2px solid var(--color-border);
-  width: 100%;
+  border: 1px solid var(--color-border);
+  width:20%;
   display: flex;
+  flex-direction: column;
 }
 .folders-header {
-  width: 20%;
+  width: 100%;
   height: 10vh;
   display: flex;
   justify-content: space-between;
+  padding: 10px;
 }
 .folders-header > * {
   flex: 1;
-  display: flex;
   justify-content: center;
   align-items: center;
   font-size: 1.7rem;
@@ -281,11 +281,11 @@ a {
 .folders-items {
   padding: 10px;
   flex: 1;
-  display: flex;
-  justify-content: flex-start;
   align-items: center;
+  display: flex;
+  flex-direction: column;
   gap: 20px;
-    overflow-x: auto;      /* enable horizontal scrolling */
+    overflow-y: auto;      /* enable horizontal scrolling */
   white-space: nowrap;   /* prevent items from wrapping */
   scrollbar-width: thin; /* optional: thinner scrollbar for Firefox */
 }
@@ -311,10 +311,10 @@ a {
 }
 
 .add-folders input {
-  width: 80%;
+  width: 100%;
   display: flex;
-  height: 70%;
   border-radius: 10px;
+  padding: 5px;
   outline: none;
   border: 1px solid var(--color-border);
   cursor: pointer;
@@ -442,6 +442,8 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  border-bottom: 1px solid var(--color-border);
+  padding: 10px;
 }
 .file-modal{
   background: var(--color-primary-soft);
@@ -564,22 +566,35 @@ a {
 }
 .options>*{
   display: flex;
+  justify-content: center;
   outline: none;
   text-decoration: none;
   color: var(--color-text);
   border-radius: 10px;
-  padding: 10px;
+  padding: 20px;
 }
 .options .delete{
   border: 1px solid var(--color-border);
   background-color: var(--color-danger);
   text-decoration: none;
   padding: 10px;
+  width: 100%;
+
 
 }
 .deletefolder{
    border: 1px solid var(--color-border);
   background-color: var(--color-danger);
+  text-decoration: none;
+  padding: 10px;
+  outline: none;
+  text-decoration: none;
+  color: var(--color-text);
+  border-radius: 10px;
+}
+.editfolder{
+   border: 1px solid var(--color-border);
+  background-color: var(--color-success);
   text-decoration: none;
   padding: 10px;
   outline: none;
